<resources>
    <string name="app_name">BigBasket</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_next">Next</string>
    <string name="action_demo">Demo</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_net_banking">NetBankingActivity</string>
    <string name="title_activity_cash_card">CashCardActivity</string>
    <string name="title_activity_emi">EmiActivity</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="title_activity_user_cards">UserCardsActivity</string>
    <string name="title_activity_payments">PaymentsActivity</string>
    <string name="pay_now">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="click_here">Click here</string>
    <string name="if_cvv_and_expiry_on_card"> &#160;if you have CVV and Expiry on your card</string>
    <string name="if_dont_cvv_and_expiry_on_card"> &#160;if you don\'t have CVV and Expiry on your card</string>
    <string name="net_banking">Net Banking</string>
    <string name="title_activity_merchant_payment">MerchantPaymentActivity</string>
    <string name="title_activity_verify_api">VerifyApiActivity</string>

    <!--note is ude to tell user -->
    <string name="note_navigation">Note: You will be navigated to payment gateway.</string>

    <!-- Custom strings-->
    <string name="paymentviapayu">Payment via PayU</string>
    <string name="selectoptionforpayment">Please select your preferred option to continue!</string>
    <string name="cancel_message">Do you really want to cancel the transaction ?</string>
    <string name="unknown_error_message">Something went wrong. Transaction failed</string>
    <string name="retry_message"> Something went wrong. Do you want to cancel?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="transaction_cancelled_due_back_pressed">Transaction canceled due to back pressed!</string>
    <string name="one_click_payment">One Click Payment</string>
    <string name="stored_card">Stored card</string>
    <string name="credit_debit_card">Credit / Debit card</string>
    <string name="cash_card">Cash Card</string>
    <string name="emi">EMI</string>
    <string name="payu_money">PayU Money</string>
    <string name="merchant_payment">Merchant Payment</string>
    <string name="verify_api">Verify Api</string>
    <string name="amount">Amount: %1$s</string>
    <string name="transaction_id">Transaction ID: %1$s</string>
    <string name="store_card">Store card</string>
    <string name="enable_one_click_payment">Enable One click payment</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name as on Card</string>
    <string name="mm">MM</string>
    <string name="yyyy">YYYY</string>
    <string name="cvv">CVV</string>
    <string name="cc_pay_now">Pay Now</string>
    <string name="emi_pay_now">Emi Pay Now</string>
    <string name="select_net_banking">Select Net banking (of your choice):</string>
    <string name="delete_card">Delete</string>
</resources>
