<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/toolbarMain"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mbblogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:background="@drawable/bb_logo_transparent_bkg"
                android:contentDescription="@string/app_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/mbblogo"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:paddingBottom="16dp">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    android:visibility="visible" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linear_layout_one_click_payment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/payu_divider_color" />

                        <Button
                            android:id="@+id/button_one_click_payment"
                            style="@style/PayuPaymentOptionStyle"
                            android:drawableLeft="@drawable/one_click"
                            android:text="@string/one_click_payment" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_stored_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/payu_divider_color" />

                        <Button
                            android:id="@+id/button_stored_card"
                            style="@style/PayuPaymentOptionStyle"
                            android:drawableLeft="@drawable/ic_account_balance_wallet_black_24dp"
                            android:text="@string/stored_card" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_netbanking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/payu_divider_color" />

                        <Button
                            android:id="@+id/button_netbanking"
                            style="@style/PayuPaymentOptionStyle"
                            android:drawableLeft="@drawable/ic_account_balance_black_24dp"
                            android:text="@string/net_banking" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_credit_debit_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/payu_divider_color" />

                        <Button
                            android:id="@+id/button_credit_debit_card"
                            style="@style/PayuPaymentOptionStyle"
                            android:drawableLeft="@drawable/ic_credit_card_black_24dp"
                            android:text="@string/credit_debit_card" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_cash_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/payu_divider_color" />

                        <Button
                            android:id="@+id/button_cash_card"
                            style="@style/PayuPaymentOptionStyle"
                            android:drawableLeft="@drawable/ic_credit_card_black_24dp"
                            android:text="@string/cash_card" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_emi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/payu_divider_color" />

                        <Button
                            android:id="@+id/button_emi"
                            style="@style/PayuPaymentOptionStyle"
                            android:drawableLeft="@drawable/ic_credit_card_black_24dp"
                            android:text="@string/emi" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_payumoney"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/payu_divider_color" />

                        <Button
                            android:id="@+id/button_payumoney"
                            style="@style/PayuPaymentOptionStyle"
                            android:drawableLeft="@drawable/payu_money"
                            android:text="@string/payu_money" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_merchant_payment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/payu_divider_color" />

                        <Button
                            android:id="@+id/button_merchant_payment"
                            style="@style/PayuPaymentOptionStyle"
                            android:drawableLeft="@drawable/ic_credit_card_black_24dp"
                            android:text="@string/merchant_payment" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_verify_api"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/payu_divider_color" />

                        <Button
                            android:id="@+id/button_verify_api"
                            style="@style/PayuPaymentOptionStyle"
                            android:drawableLeft="@drawable/ic_credit_card_black_24dp"
                            android:text="@string/verify_api" />

                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
</LinearLayout>
