<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_view_card_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/pay_now"
        android:src="@drawable/app_bar_next" />

    <ImageView
        android:id="@+id/image_view_card_trash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/delete_card"
        android:src="@drawable/trash" />

    <TextView
        android:id="@+id/text_view_card_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/image_view_card_trash"
        android:layout_toRightOf="@id/image_view_card_icon"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_view_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_card_name"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@id/image_view_card_trash"
        android:layout_toRightOf="@id/image_view_card_icon"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/linear_layout_cvv_paynow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_card_number"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@id/image_view_card_trash"
        android:layout_toRightOf="@id/image_view_card_icon"
        android:orientation="horizontal"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_text_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cvv"
                android:imeActionLabel="@string/pay_now"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="4" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_pay_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:padding="16dp"
            android:text="@string/pay_now"
            android:textSize="12sp" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/check_box_enable_one_click_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_cvv_paynow"
        android:layout_marginTop="4dp"
        android:layout_toRightOf="@id/image_view_card_icon"
        android:text="@string/enable_one_click_payment"
        android:visibility="gone" />

</RelativeLayout>