<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.payuResponse.testapp.EmiActivity">


    <include
        android:id="@+id/toolbarMain"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Spinner
                android:id="@+id/spinner_emi_bank_name"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_emi_duration"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp">

                        <EditText
                            android:id="@+id/edit_text_emi_card_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/card_number"
                            android:inputType="number"
                            android:maxLength="19" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp">

                        <EditText
                            android:id="@+id/edit_text_emi_name_on_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name_on_card"
                            android:maxLength="19" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="5">

                            <EditText

                                android:id="@+id/edit_text_emi_expiry_month"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/mm"
                                android:inputType="number"
                                android:maxLength="2" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="5">

                            <EditText
                                android:id="@+id/edit_text_emi_expiry_year"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/yyyy"
                                android:inputType="number"
                                android:maxLength="4" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp">

                        <EditText
                            android:id="@+id/edit_text_emi_cvv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cvv"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="4" />
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button_emi_pay_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_background"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/emi_pay_now"
                android:textColor="@android:color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
