<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <include
        android:id="@+id/toolbarMain"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarMain">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/mbblogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="20dp"
                android:background="@drawable/bb_logo_transparent_bkg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/mbblogo"
                android:orientation="vertical"
                android:weightSum="1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:layout_weight=".70"
                    android:background="@drawable/layout_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/text_view_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rs."
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textColor="@color/button_selected_state_color" />

                    <TextView
                        android:id="@+id/text_view_transaction_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Transaction id : "
                        android:textColor="@color/button_selected_state_color" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_root_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:layout_weight=".30"
                    android:background="@drawable/layout_background"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/text_view_issuer_down"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:background="@drawable/error_box"
                        android:gravity="center"
                        android:textColor="#FF0000"
                        android:visibility="gone" />


                    <EditText
                        android:id="@+id/edit_text_card_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="Card Number"
                        android:imeOptions="actionNone"
                        android:inputType="number"
                        android:maxLength="19"
                        android:singleLine="true" />


                    <EditText
                        android:id="@+id/edit_text_name_on_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="Name as on Card"
                        android:inputType="text"
                        android:singleLine="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText

                            android:id="@+id/edit_text_expiry_month"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:hint="MM"
                            android:inputType="number"
                            android:maxLength="2"
                            android:singleLine="true" />

                        <EditText
                            android:id="@+id/edit_text_expiry_year"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="5"
                            android:gravity="center"
                            android:hint="YYYY"
                            android:inputType="number"
                            android:maxLength="4"
                            android:singleLine="true" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/edit_text_card_cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="CVV"
                        android:inputType="number"
                        android:maxLength="4"
                        android:singleLine="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/check_box_save_card"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="5"
                            android:text="Store card" />

                        <CheckBox
                            android:id="@+id/check_box_enable_one_click_payment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="5"
                            android:text="Enable One click payment" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/button_card_make_payment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:background="@drawable/button_background"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="Pay Now"
                        android:textColor="@android:color/white"
                        android:textSize="17sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:id="@+id/linear_layout_have_cvv_expiry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/text_view_have_click_here"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:text="@string/click_here" />

                        <TextView
                            android:id="@+id/text_view_have_cvv_and_expiry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/if_cvv_and_expiry_on_card" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_dont_have_cvv_expiry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/text_view_dont_have_click_here"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:text="@string/click_here" />

                        <TextView
                            android:id="@+id/text_view_dont_have_cvv_and_expiry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/if_dont_cvv_and_expiry_on_card" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="5dp"
                android:text="Note: You will be navigated to payment gateway." />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
